--- a/index.html
+++ b/index.html
@@ -7,299 +7,12 @@
 <title>Théo Richard</title>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@900&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<style>
-  /* ── HERO ── */
-  .hero-index {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    padding: 0 4vw 5rem;
-    overflow: hidden;
-    margin-left: -4vw;
-    margin-right: -4vw;
-    margin-top: -7rem;
-  }
-
-  .hero-bg {
-    position: absolute;
-    inset: 0;
-    background: url('image/index-1.webp') center center / cover no-repeat;
-    filter: brightness(0.45);
-    transform: scale(1.05);
-    animation: slowZoom 18s ease-out forwards;
-  }
-
-  @keyframes slowZoom {
-    from { transform: scale(1.05); }
-    to   { transform: scale(1.0); }
-  }
-
-  .hero-content {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-  }
-
-  .hero-content h1 {
-    font-family: 'Outfit', sans-serif;
-    font-weight: 900;
-    font-size: clamp(3rem, 8vw, 6rem);
-    text-transform: uppercase;
-    margin: 0 0 1.5rem;
-    line-height: 1;
-    opacity: 0;
-    transform: translateY(30px);
-    animation: fadeUp 0.9s 0.3s ease forwards;
-  }
-
-  .hero-meta {
-    display: flex;
-    align-items: center;
-    gap: 3rem;
-    flex-wrap: wrap;
-    opacity: 0;
-    transform: translateY(20px);
-    animation: fadeUp 0.9s 0.6s ease forwards;
-  }
-
-  .hero-bio {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.9rem;
-    line-height: 1.8;
-    max-width: 480px;
-    color: rgba(255,255,255,0.85);
-  }
-
-  .hero-links {
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
-  }
-
-  .hero-links a {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.85rem;
-    color: #fff;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    letter-spacing: 0.05em;
-    position: relative;
-    width: fit-content;
-  }
-
-  .hero-links a::after {
-    content: "";
-    position: absolute;
-    left: 0; bottom: -2px;
-    width: 0%; height: 1px;
-    background: #fff;
-    transition: width 0.3s ease;
-  }
-
-  .hero-links a:hover::after { width: 100%; }
-
-  .hero-scroll {
-    position: absolute;
-    bottom: 2rem;
-    right: 4vw;
-    z-index: 2;
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.75rem;
-    color: rgba(255,255,255,0.5);
-    letter-spacing: 0.15em;
-    writing-mode: vertical-rl;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    opacity: 0;
-    animation: fadeIn 1s 1.2s ease forwards;
-  }
-
-  .hero-scroll::before {
-    content: "";
-    display: block;
-    width: 1px;
-    height: 40px;
-    background: rgba(255,255,255,0.3);
-    animation: growLine 1.5s 1.5s ease forwards;
-    transform-origin: top;
-    transform: scaleY(0);
-  }
-
-  @keyframes growLine {
-    to { transform: scaleY(1); }
-  }
-
-  /* ── SECTION INTRO ── */
-  .intro-section {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 4rem;
-    padding: 7rem 0;
-    border-top: 1px solid #000;
-  }
-
-  .intro-label {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.75rem;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    padding-top: 0.3rem;
-  }
-
-  .intro-text {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 1rem;
-    line-height: 1.9;
-  }
-
-  .intro-text a {
-    border-bottom: 1px solid #000;
-    padding-bottom: 1px;
-  }
-
-  .intro-text a:hover {
-    opacity: 0.5;
-  }
-
-  /* ── APERÇU PHOTOS ── */
-  .preview-section {
-    border-top: 1px solid #000;
-    padding: 5rem 0 8rem;
-  }
-
-  .preview-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    margin-bottom: 3rem;
-  }
-
-  .preview-header h2 {
-    font-family: 'Outfit', sans-serif;
-    font-weight: 900;
-    font-size: 2.5rem;
-    text-transform: uppercase;
-    margin: 0;
-  }
-
-  .preview-header a {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.85rem;
-    letter-spacing: 0.1em;
-    border-bottom: 1px solid #000;
-    padding-bottom: 1px;
-  }
-
-  .preview-header a:hover { opacity: 0.5; }
-
-  .preview-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
-  }
-
-  .preview-grid img {
-    width: 100%;
-    aspect-ratio: 3/4;
-    object-fit: cover;
-    display: block;
-    transition: opacity 0.3s ease;
-  }
-
-  .preview-grid img:hover { opacity: 0.75; }
-
-  /* ── ANIMATIONS ── */
-  @keyframes fadeUp {
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  @keyframes fadeIn {
-    to { opacity: 1; }
-  }
-
-  /* ── RESPONSIVE ── */
-  @media (max-width: 900px) {
-    .intro-section { grid-template-columns: 1fr; gap: 1.5rem; padding: 4rem 0; }
-    .preview-grid { grid-template-columns: repeat(2, 1fr); }
-    .hero-content h1 { font-size: clamp(2.5rem, 10vw, 4rem); }
-    .hero-meta { flex-direction: column; gap: 1.5rem; }
-  }
-
-  /* ── HEADER BLANC SUR HERO ── */
-  .hero-header {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    z-index: 5000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.5rem 4vw;
-    transition: background 0.4s ease, color 0.4s ease;
-  }
-
-  .hero-header.scrolled {
-    background: #fff;
-  }
-
-  .hero-header.scrolled .home-button,
-  .hero-header.scrolled .top-bar a {
-    color: #000;
-  }
-
-  .hero-header .home-button,
-  .hero-header .top-bar a {
-    color: #fff;
-    font-family: 'IBM Plex Mono', monospace;
-    font-weight: 500;
-    font-size: 0.9rem;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-    position: relative;
-    text-decoration: none;
-  }
-
-  .hero-header .home-button {
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-  }
-
-  .hero-header .home-icon {
-    font-size: 1.8rem;
-    line-height: 1;
-  }
-
-  .hero-header .top-bar {
-    display: flex;
-    gap: 3rem;
-  }
-
-  .hero-header .home-button::after,
-  .hero-header .top-bar a::after {
-    content: "";
-    position: absolute;
-    left: 0; bottom: -4px;
-    width: 0%; height: 2px;
-    background: currentColor;
-    transition: width 0.3s ease;
-  }
-
-  .hero-header .home-button:hover::after,
-  .hero-header .top-bar a:hover::after { width: 100%; }
-</style>
 </head>
 
 <body>
+<div class="page-wrapper">
 
-<!-- Header transparent qui devient blanc au scroll -->
-<header class="hero-header" id="mainHeader">
+<header class="site-header">
   <a href="index.html" class="home-button">
     <span class="home-icon">⌂</span> ACCUEIL
   </a>
@@ -311,78 +24,58 @@
   </nav>
 </header>
 
-<div class="page-wrapper" style="padding-top: 0;">
-
-  <!-- HERO PLEIN ÉCRAN -->
-  <section class="hero-index">
-    <div class="hero-bg"></div>
-
-    <div class="hero-content">
-      <h1>THÉO RICHARD<br>Photographie<br>argentique</h1>
-      <div class="hero-meta">
-        <p class="hero-bio">
-          Photographe basé en France.<br>
-          Shootings, développements, tirages.<br>
-          Disponible sur rendez-vous.
-        </p>
-        <div class="hero-links">
-          <a href="mailto:contact@theo-richard.fr">✉ contact@theo-richard.fr</a>
-          <a href="https://instagram.com/the0_richard" target="_blank">◎ @the0_richard</a>
-          <a href="photographie.html">→ Voir les photos</a>
-        </div>
-      </div>
+<!-- HERO -->
+<section class="hero-index">
+  <h1>THÉO RICHARD<br>Photographie<br>argentique</h1>
+  <div class="hero-meta">
+    <p class="hero-bio">
+      Photographe basé en France.<br>
+      Shootings, développements, tirages.<br>
+      Disponible sur rendez-vous.
+    </p>
+    <div class="hero-links">
+      <a href="mailto:contact@theo-richard.fr">✉ contact@theo-richard.fr</a>
+      <a href="https://instagram.com/the0_richard" target="_blank">◎ @the0_richard</a>
+      <a href="photographie.html">→ Voir les photos</a>
     </div>
+  </div>
+</section>
 
-    <span class="hero-scroll">Scroll</span>
-  </section>
+<!-- INTRO / BIO -->
+<section class="intro-section">
+  <div class="intro-label">À propos</div>
+  <div class="intro-text">
+    <p>
+      Je photographie en argentique — un médium lent, physique, qui oblige à choisir.
+      Chaque image est une décision avant d'être un souvenir.
+    </p>
+    <p>
+      Mon travail tourne autour du quotidien urbain et du portrait : des visages, des rues,
+      de la lumière ordinaire rendue extraordinaire par le grain du film.
+    </p>
+    <p>
+      Pour les questions de shooting, développement ou tirage :
+      <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>
+      — ou retrouvez-moi sur Instagram
+      <a href="https://instagram.com/the0_richard" target="_blank">@the0_richard</a>.
+    </p>
+  </div>
+</section>
 
-  <!-- INTRO / BIO -->
-  <section class="intro-section">
-    <div class="intro-label">À propos</div>
-    <div class="intro-text">
-      <p>
-        Je photographie en argentique — un médium lent, physique, qui oblige à choisir. 
-        Chaque image est une décision avant d'être un souvenir.
-      </p>
-      <p>
-        Mon travail tourne autour du quotidien urbain et du portrait : des visages, des rues, 
-        de la lumière ordinaire rendue extraordinaire par le grain du film.
-      </p>
-      <p>
-        Pour les questions de shooting, développement ou tirage :
-        <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>
-        — ou retrouvez-moi sur Instagram
-        <a href="https://instagram.com/the0_richard" target="_blank">@the0_richard</a>.
-      </p>
-    </div>
-  </section>
-
-  <!-- APERÇU PHOTOS -->
-  <section class="preview-section">
-    <div class="preview-header">
-      <h2>Photographie</h2>
-      <a href="photographie.html">Voir tout →</a>
-    </div>
-    <div class="preview-grid">
-      <img src="https://picsum.photos/400/530?1" alt="">
-      <img src="https://picsum.photos/400/530?2" alt="">
-      <img src="https://picsum.photos/400/530?3" alt="">
-      <img src="https://picsum.photos/400/530?4" alt="">
-    </div>
-  </section>
+<!-- APERÇU PHOTOS -->
+<section class="preview-section">
+  <div class="preview-header">
+    <h2>Photographie</h2>
+    <a href="photographie.html">Voir tout →</a>
+  </div>
+  <div class="preview-grid">
+    <img src="https://picsum.photos/400/530?1" alt="">
+    <img src="https://picsum.photos/400/530?2" alt="">
+    <img src="https://picsum.photos/400/530?3" alt="">
+    <img src="https://picsum.photos/400/530?4" alt="">
+  </div>
+</section>
 
 </div>
-
-<script>
-  const header = document.getElementById('mainHeader');
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > window.innerHeight * 0.7) {
-      header.classList.add('scrolled');
-    } else {
-      header.classList.remove('scrolled');
-    }
-  });
-</script>
-
 </body>
 </html>
