--- a/index.html
+++ b/index.html
@@ -46,18 +46,20 @@
   <div class="intro-label">À propos</div>
   <div class="intro-text">
     <p>
-      Je photographie en argentique — un médium lent, physique, qui oblige à choisir.
-      Chaque image est une décision avant d'être un souvenir.
+      Je photographie en argentique.
+      Les images sont prises une a une et ont un charme dans l'erreur.<br>
+      Du sujet à la photo, la route est longue et ici je propose un état des lieux à mi-chemin :<br>
+      Après avoir développé, les photos sont numérisées, puis traitées.<br>
+      Pour connaitre la suite de leur aventure dans le labo, je vous invite à vous référer à la page <a href="contact.html">contact</a>.
     </p>
     <p>
-      Mon travail tourne autour du quotidien urbain et du portrait : des visages, des rues,
-      de la lumière ordinaire rendue extraordinaire par le grain du film.
+      Mon travail tourne autour du quotidien et du portrait : des visages, des rues, des natures mortes ;<br>
+      de la lumière ordinaire rendue extraordinaire par le grain du film. Le quotidien dont je parle, c'est pas celui des sujets, c'est souvent le mien.
     </p>
     <p>
       Pour les questions de shooting, développement ou tirage :
-      <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a>
-      — ou retrouvez-moi sur Instagram
-      <a href="https://instagram.com/the0_richard" target="_blank">@the0_richard</a>.
+      <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a><br>
+      Retrouvez-moi aussi sur Instagram : <a href="https://instagram.com/the0_richard" target="_blank">@the0_richard</a>.
     </p>
   </div>
 </section>
