--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
   <h1>THÉO RICHARD<br>Photographie<br>argentique</h1>
   <div class="hero-meta">
     <p class="hero-bio">
-      Photographe basé en France.<br>
+      Photographe Français.<br>
       Shootings, développements, tirages.<br>
-      Disponible sur rendez-vous.
     </p>
     <div class="hero-links">
       <a href="mailto:contact@theo-richard.fr">✉ contact@theo-richard.fr</a>
