--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
+  <script>
+  document.querySelectorAll('img').forEach(img => {
+    if (img.complete) {
+      img.classList.add('loaded');
+    } else {
+      img.addEventListener('load', () => img.classList.add('loaded'));
+    }
+  });
+</script>
+  
 <body>
 <div class="page-wrapper">
 
