--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <a href="photographie.html">→ Voir les photos</a>
     </div>
   </div>
+  <span class="hero-scroll">Scroll</span>
 </section>
 
 <!-- INTRO / BIO -->
