--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
 <!-- HERO -->
 <section class="hero-index">
-  <h1>THÉO RICHARD<br>Photographie<br>argentique</h1>
+  <h1>THÉO RICHARD</h1>
   <div class="hero-meta">
     <p class="hero-bio">
-      Photographe Français.<br>
-      Shootings, développements, tirages.<br>
+       Photographie argentique.<br>
+       Studio & Labo.<br>
     </p>
     <div class="hero-links">
       <a href="mailto:contact@theo-richard.fr">✉ contact@theo-richard.fr</a>
-      <a href="https://instagram.com/the0_richard" target="_blank">◎ @the0_richard</a>
+      <a href="https://instagram.com/the0_richard">◎ @the0_richard</a>
       <a href="photographie.html">→ Voir les photos</a>
     </div>
   </div>
@@ -49,8 +49,7 @@
       Je photographie en argentique.
       Les images sont prises une a une et ont un charme dans l'erreur.<br>
       Du sujet à la photo, la route est longue et ici je propose un état des lieux à mi-chemin :<br>
-      Après avoir développé, les photos sont numérisées, puis traitées.<br>
-      Pour connaitre la suite de leur aventure dans le labo, je vous invite à vous référer à la page <a href="contact.html">contact</a>.
+      Après avoir développé, les photos sont numérisées, puis traitées, mais ce n'est pas la fin de leur aventure : pour connaitre la suite <strong><a href="https://instagram.com/the0_richard">c'est ici que ça se passe</a></strong>
     </p>
     <p>
       Mon travail tourne autour du quotidien et du portrait : des visages, des rues, des natures mortes ;<br>
