--- a/index.html
+++ b/index.html
@@ -49,16 +49,11 @@
       Je photographie en argentique.
       Les images sont prises une a une et ont un charme dans l'erreur.<br>
       Du sujet à la photo, la route est longue et ici je propose un état des lieux à mi-chemin :<br>
-      Après avoir développé, les photos sont numérisées, puis traitées, mais ce n'est pas la fin de leur aventure : pour connaitre la suite <strong><a href="https://instagram.com/the0_richard">c'est ici que ça se passe</a></strong>
+      Après avoir développé, les photos sont numérisées, puis traitées, mais ce n'est pas la fin de leur aventure : pour connaitre la suite <a href="https://instagram.com/the0_richard">rendez-vous sur les réseaux.</a>
     </p>
     <p>
       Mon travail tourne autour du quotidien et du portrait : des visages, des rues, des natures mortes ;<br>
       de la lumière ordinaire rendue extraordinaire par le grain du film. Le quotidien dont je parle, c'est pas celui des sujets, c'est souvent le mien.
-    </p>
-    <p>
-      Pour les questions de shooting, développement ou tirage :
-      <a href="mailto:contact@theo-richard.fr">contact@theo-richard.fr</a><br>
-      Retrouvez-moi aussi sur Instagram : <a href="https://instagram.com/the0_richard" target="_blank">@the0_richard</a>.
     </p>
   </div>
 </section>
