--- a/archive.html
+++ b/archive.html
@@ -27,7 +27,7 @@
 
 <div class="construction-container">
 <h1>PAGE EN CONSTRUCTION</h1>
-<p>Clairement pas <s>commencée</s> terminée, mais en même temps j'ai rien à archiver. Tu prends un sac quand tu n'as rien à porter ?</p>
+<p>Clairement pas <s>commencée</s> terminée, mais en même temps j'ai rien à archiver.</p>
 <p>Pour plus d’informations : contact@theo-richard.fr</p>
 <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
 </div>
