--- a/ecriture.html
+++ b/ecriture.html
@@ -5,69 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Écriture — Théo Richard</title>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<style>
-
-.ecriture-index {
-    display: grid;
-    grid-template-columns: 1fr 1px 1fr;
-    min-height: calc(100vh - 7rem);
-    align-items: center;
-}
-
-.ecriture-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 4rem 6vw;
-    text-decoration: none;
-    color: #000;
-    transition: opacity 0.2s ease;
-}
-
-.ecriture-col:hover {
-    opacity: 0.5;
-}
-
-.ecriture-divider {
-    width: 1px;
-    height: 40vh;
-    background: #000;
-    align-self: center;
-}
-
-.ecriture-col h2 {
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 500;
-    font-size: clamp(1.8rem, 3vw, 2.8rem);
-    margin: 0 0 1.5rem;
-    line-height: 1;
-}
-
-.ecriture-col p {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.85rem;
-    line-height: 1.8;
-    opacity: 0.5;
-    margin: 0;
-    max-width: 280px;
-}
-
-@media (max-width: 700px) {
-    .ecriture-index {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1px 1fr;
-    }
-    .ecriture-divider {
-        width: 40vw;
-        height: 1px;
-    }
-}
-
-</style>
 </head>
 
 <body>
